# eig3x3

./: .devcontainer.json  CITATION.cff  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: python.yml
benchmarks/: benchmarks.py  examples.py  general_matrix.txt  performance_benchmark.c  plots.py  run.sh  test_eigvals.py
src/eig3x3/: __init__.py  _build_cffi.py  impl_naive.py  impl_naive_tensor.py
src/eig3x3/c/: eig3x3.h
